# DocsToKG

./: .env.deployment  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  ACQUIRE_LOCK_CLEANUP_FINAL_AUDIT.md  ACTUAL_LIBRARIES_USED.md  ADDITIONAL_ENHANCEMENTS.md  AGENTS.md  ALL_PHASES_COMPLETE.md  ALL_SCOPES_COMPLETION_SUMMARY.txt  ARCHITECTURE_ALIGNMENT_COMPLETE.md  AUTOMATED_REVIEW_RESULTS.md  BACKWARD_COMPATIBILITY_REMOVAL_COMPLETE.md  BACKWARD_COMPATIBILITY_REMOVAL_REPORT.md  BACKWARD_COMPAT_AUDIT.md  BACKWARD_COMPAT_REMOVAL_SESSION_COMPLETE.md  BREAKER_LOADER_IMPLEMENTATION.md  BREAKER_LOADER_IMPLEMENTATION_SUMMARY.txt  BREAKER_LOADER_ROBUSTNESS_REVIEW.md  CANONICAL_MODEL_IMPLEMENTATION_COMPLETE.md  CATEGORY_B_COMPLETION.md  CHANGELOG.md  CIRCUIT_BREAKER_DEPLOYMENT.md  CIRCUIT_BREAKER_IMPLEMENTATION_PLAN.md  CIRCUIT_BREAKER_PLAN_SUMMARY.txt  CLEANUP_COMPLETE.md  CLEANUP_FINAL_REPORT.md  CODE_REVIEW_SIGN_OFF.txt  COMPLETE_DELIVERY_SUMMARY.md  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  COMPLETE_PROJECT_SUMMARY_FINAL.md  COMPREHENSIVE_DOCUMENTATION_REVIEW_ROADMAP.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONCLUSION_PILLARS_7_8.md  CONFIG_UNIFICATION_AUDIT.md  CONNECTOR_ARCHITECTURE.md  CONNECTOR_IMPLEMENTATION_NEXT_STEPS.md  CONTENTDOWNLOAD_CATALOG_AUDIT_CLEAN.md  (+456 more)
.ci/: coverage.json
.codex/: codex_envsetup.sh  config.toml  policy.md
.github/workflows/: ci-schema-drift.yml  ci.yml  docparsing-tests.yml  docs-generation.yml  docs-validation.yml  docs.yml  guard-atomic-writes.yml  guard-contentdownload-quality.yml  guard-requests-usage.yml  wheels-ci.yml
.hypothesis/constants/: 000445316c074b87  0032e1930626ac58  004e687321e8b4f9  02dcac1ca0252608  04c00731625f7d72  0a0dc74740c83b4b  0ad1f9f3889ed10a  0e5f3c67ecb60720  0e712bc7417f4aa5  0ecc3a9891a8d923  1165ee6063e549cc  126bd62b0ac8fb11  1aa02b8022554e2d  1c030067d296ffb4  1c363f9ef285b50e  20671077de4ceff2  215e3dd43847eeae  244eef3d3053c9ec  2453ea87baf96a83  26576fa2dbd44832  26ae1eaa90c860b9  278611484027b740  286def0e1cb2e0d5  29c56a5019a504c3  2a206c8491bc9677  2badabb200fe58fb  2d3d9812d5207b88  30cc3bd311b9d0fe  31318312bff3dfc3  313fda0716d728f2  (+103 more)
.venv_fix/: pyvenv.cfg
AGENTS DO NOT TOUCH docs-instruct/: Subdir-README-Generator-Spec.md
HTML/: 2025__Why_frailty_must_be_central_in_antiamyloid_therapies_for_Alzheimers_disease__W4415195821.html
Manifests/: docparse.embeddings.attempts.jsonl  docparse.embeddings.manifest.jsonl
codex/: codex1.patch  codex2.patch
config/: resolver_config.sample.yaml
dashboards/: idempotency_monitoring.json
deployment/: blue-green.sh  docker-compose.prod.yml  grafana-dashboard-database.json  grafana-dashboard-overview.json  grafana-provisioning-dashboards.yml  grafana-provisioning-datasources.yml  prometheus-rules.yml  prometheus.yml
docs/: .gitignore  100-content-download.level2.md  100-content-download.level2.updated.md  100-content-download.md  110-ontology-download.level2.md  110-ontology-download.level2.updated.md  110-ontology-download.md  110-ontology-download.updated.md  120-docparsing.level2.md  120-docparsing.md  130-hybrid-search.level2.md  130-hybrid-search.md  200-knowledge-graph.level2.md  200-knowledge-graph.md  300-rag-service.level2.md  300-rag-service.md  400-agent-gateway.level2.md  400-agent-gateway.md  500-observability-slos.level2.md  500-observability-slos.md  600-security-data-handling.level2.md  900-north-star-complete.md  CODE_ANNOTATION_STANDARDS.md  ContentDownloadReview.md  ContentParsingReview.md  DOCUMENTATION_MAINTENANCE_SCHEDULE.md  DOCUMENTATION_REVIEW_PROCESS.md  DownloadOntologyReview.md  HybridSearch-GPU.md  MIGRATION.md  Makefile  README.md  ROLLOUT_PLAN.md  STYLE_GUIDE.md  TRAINING_GUIDE.md  _toc.yml  adding-custom-resolvers.md  architecture.md  content-download-migration.md  faiss-reference.md  (+6 more)
docs-instruct/: Subdir-AGENTS-Generator-Spec.md  Subdir-AGENTS-Lint.json  Subdir-AGENTS-Template.md  Subdir-README-Generator-Spec.md  Subdir-README-Lint.json  Subdir-README-Template.md
examples/: content_download_with_enhancements.py  hybrid_search_quickstart.py  quick_start_enhanced_features.py
monitoring/: idempotency_alerts.yaml
openspec/: AGENTS.md  project.md
pdfs/: manifest.index.json  manifest.jsonl  manifest.last.csv  manifest.sqlite3
scripts/: FaissInstallCompleteEndtoEnd.sh  FaissWheelInstallMinimal.sh  GetDeviceCapability.sh  NinjaVllmVariables.sh  __init__.py  bootstrap_env.sh  build_real_hybrid_fixture.py  calibrate_tokenizers.py  codex-bugfix-parallel.sh  codex-review-parallel.sh  deploy_circuit_breaker.sh  deploy_hishel_production.sh  dev.sh  enforce_no_legacy_schema_imports.py  enforce_no_manual_docparse_locks.py  export_attempts_csv.py  generate_config_schema.py  init.sh  migrate_resolvers.py  modeldownload.sh  ontofetch_benchmark.py  p4_3_slo_verification_and_rollout.py  run_hybrid_tests.py  run_precommit.sh  torchcheck.py  update_navmaps.py  vLLM_build.sh
tests/: __init__.py  _stubs.py  conftest.py  test_atomic_write_integrations.py  test_atomic_writes.py  test_basic.py  test_bounded_concurrency.py  test_cli.py  test_conditional_requests.py  test_content_download_utils.py  test_cuda_safety.py  test_determinism_fixtures.py  test_docparsing_cli_integration.py  test_docparsing_common.py  test_docparsing_legacy_shims.py  test_docparsing_paths.py  test_docparsing_schemas.py  test_docparsing_tripwires.py  test_docparsing_validation.py  test_download_outcomes.py  test_download_retries.py  test_download_utils.py  test_dry_run.py  test_edge_cases.py  test_embedding_memory_paths.py  test_embedding_splade_metadata.py  test_end_to_end_offline.py  test_environment_instructions.py  test_figshare_resolver.py  test_full_pipeline_integration.py  test_golden_snapshots.py  test_html_extraction.py  test_http_retry.py  test_hybrid_search.py  test_hybrid_search_real_vectors.py  test_hybrid_search_scale.py  test_hybridsearch_gpu_only.py  test_jsonl_logging.py  test_parallel_execution.py  test_perf_reporting.py  (+17 more)
tools/: __init__.py  docparsing_autolint.py  manifest_to_csv.py  manifest_to_index.py
(+2707 files in other folders)
