[project]
name = "DocsToKG"
version = "0.1.0"
description = "DocsToKG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bioregistry>=0.10.0",
    "oaklib>=0.5.0",
    "ols-client>=0.1.4",
    "ontoportal-client>=0.0.3",
    "rdflib>=7.0.0,<8.0.0",
    "pronto>=2.5.0,<3.0.0",
    "owlready2>=0.43",
    "arelle>=2.20.0",
    "pystow>=0.5.0",
    "pooch>=1.7.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.28.0,<3.0.0",
    "pydantic>=2.0,<3.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
markers = [
    "real_vectors: tests that require the real-vector fixture (enable with --real-vectors)",
    "scale_vectors: tests that require the large real-vector fixture (enable with --scale-vectors)",
]
testpaths = ["tests"]

[tool.poetry.group.extract]
optional = true

[tool.poetry.group.extract.dependencies]
trafilatura = "^1.6.0"
