[project]
name = "DocsToKG"
version = "0.2.0"
description = "DocsToKG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.0",
    "aiosignal>=1.4.0",
    "airium>=0.2.7",
    "alabaster>=1.0.0",
    "annotated-types>=0.7.0",
    "antlr4-python3-runtime>=4.9.3",
    "anyio>=4.11.0",
    "apache-tvm-ffi>=0.1.0b15",
    "appdirs>=1.4.4",
    "arelle>=2.2",
    "arrow>=1.3.0",
    "astor>=0.8.1",
    "asttokens>=3.0.0",
    "asyncio>=4.0.0",
    "attrs>=25.4.0",
    "av>=16.0.1",
    "babel>=2.17.0",
    "bcp47>=0.1.0",
    "beautifulsoup4>=4.14.2",
    "bidict>=0.23.1",
    "biopython>=1.85",
    "bioregistry>=0.12.43",
    "black>=25.9.0",
    "blake3>=1.0.8",
    "blinker>=1.9.0",
    "blis>=1.3.0",
    "build>=1.3.0",
    "cachetools>=6.2.1",
    "catalogue>=2.0.10",
    "cattrs>=25.3.0",
    "cbor2>=5.7.0",
    "certifi>=2025.10.5",
    "cffi>=2.0.0",
    "CFGraph>=0.2.1",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.4",
    "class-resolver>=0.7.1",
    "click>=8.1.8",
    "cloudpathlib>=0.23.0",
    "cloudpickle>=3.1.1",
    "cmake>=4.1.0",
    "colorama>=0.4.6",
    "coloredlogs>=15.0.1",
    "colorlog>=6.9.0",
    "confection>=0.1.5",
    "contourpy>=1.3.3",
    "coreapi>=2.3.3",
    "coreschema>=0.0.4",
    "courlan>=1.3.2",
    "courts-db>=0.10.26",
    "coverage>=7.10.7",
    "cryptography>=46.0.2",
    "curies>=0.12.1",
    "curl_cffi>=0.13.0",
    "cycler>=0.12.1",
    "cymem>=2.0.11",
    "Cython>=3.1.4",
    "dacite>=1.9.2",
    "dash-bootstrap-components>=2.0.4",
    "dash>=3.2.0",
    "datasets>=4.2.0",
    "dateparser>=1.2.2",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "Deprecated>=1.2.18",
    "deprecation>=2.1.0",
    "depyf>=0.19.0",
    "dill>=0.4.0",
    "diskcache>=5.6.3",
    "distro>=1.9.0",
    "dnspython>=2.8.0",
    "docling-core>=2.48.4",
    "docling-parse>=4.5.0",
    "docutils>=0.21.2",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "einops>=0.8.1",
    "email-validator>=2.3.0",
    "emoji>=2.15.0",
    "et_xmlfile>=2.0.0",
    "eutils>=0.6.0",
    "executing>=2.2.1",
    "eyecite>=2.7.6",
    "Faker>=37.11.0",
    "fast_diff_match_patch>=2.1.0",
    "fastapi>=0.119.0",
    "fastapi-cli>=0.0.13",
    "fastapi-cloud-cli>=0.3.1",
    "fastobo>=0.13.0",
    "fastrlock>=0.8.3",
    "filelock>=3.20.0",
    "filetype>=1.2.0",
    "flashtext>=2.7",
    "Flask>=3.1.2",
    "flatbuffers>=25.9.23",
    "fonttools>=4.60.1",
    "fqdn>=1.5.1",
    "freezegun>=1.5.5",
    "frozendict>=2.4.6",
    "frozenlist>=1.8.0",
    "fsspec>=2025.9.0",
    "ftfy>=6.3.1",
    "funowl>=0.2.3",
    "fuzzywuzzy>=0.18.0",
    "geopandas>=1.1.1",
    "gguf>=0.17.1",
    "gitdb>=4.0.12",
    "GitPython>=3.1.45",
    "graphdatascience>=1.18a1",
    "graphviz>=0.21",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "hal-codec>=1.0.2",
    "hbreader>=0.9.1",
    "hdbscan>=0.8.40",
    "hf_transfer>=0.1.9",
    "hf-xet>=1.1.10",
    "html5rdf>=1.2.1",
    "htmldate>=1.9.3",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=0.35.3",
    "humanfriendly>=10.0",
    "hypothesis>=6.141.0",
    "icecream>=2.1.8",
    "id>=1.5.0",
    "idna>=3.11",
    "ijson>=3.4.0.post0",
    "imageio>=2.37.0",
    "imagesize>=1.4.1",
    "importlib_metadata>=8.7.0",
    "inflection>=0.5.1",
    "iniconfig>=2.1.0",
    "interchange>=2021.0.4",
    "interegular>=0.3.3",
    "ipython>=9.6.0",
    "ipython_pygments_lexers>=1.1.1",
    "isodate>=0.7.2",
    "isoduration>=20.11.0",
    "itsdangerous>=2.2.0",
    "itypes>=1.2.0",
    "jaraco.classes>=3.4.0",
    "jaraco.context>=6.0.1",
    "jaraco.functools>=4.3.0",
    "jedi>=0.19.2",
    "jeepney>=0.9.0",
    "jellyfish>=1.2.1",
    "Jinja2>=3.1.6",
    "jiter>=0.11.0",
    "joblib>=1.5.2",
    "jsobject>=0.10.2",
    "json-flattener>=0.1.9",
    "jsonasobj>=1.3.1",
    "jsonasobj2>=1.0.4",
    "jsonlines>=3.1.0",
    "jsonpath-rw>=1.4.0",
    "jsonpickle>=4.1.1",
    "jsonpointer>=3.0.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "jusText>=3.0.2",
    "keyring>=25.6.0",
    "kgcl-rdflib>=0.5.0",
    "kgcl_schema>=0.6.9",
    "kiwisolver>=1.4.9",
    "langcodes>=3.5.0",
    "language_data>=1.3.0",
    "lark>=1.2.2",
    "latex2mathml>=3.78.1",
    "lazy_loader>=0.4",
    "Levenshtein>=0.27.1",
    "linkml>=1.9.4",
    "linkml-renderer>=0.3.1",
    "linkml-runtime>=1.9.5",
    "llguidance>=0.7.30",
    "llvmlite>=0.44.0",
    "lm-format-enforcer>=0.11.3",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "lxml_html_clean>=0.4.3",
    "marisa-trie>=1.3.1",
    "markdown-it-py>=3.0.0",
    "marko>=2.2.1",
    "MarkupSafe>=3.0.3",
    "marshmallow>=3.26.1",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.1.7",
    "mcp>=1.17.0",
    "mdit-py-plugins>=0.5.0",
    "mdurl>=0.1.2",
    "mistral_common>=1.8.5",
    "modelscope>=1.30.0",
    "monotonic>=1.6",
    "more-click>=0.1.2",
    "more-itertools>=10.8.0",
    "mpire>=2.10.2",
    "mpmath>=1.3.0",
    "msgpack>=1.1.2",
    "msgspec>=0.19.0",
    "multidict>=6.7.0",
    "multimethod>=2.0",
    "multiprocess>=0.70.16",
    "multitasking>=0.0.12",
    "murmurhash>=1.0.13",
    "mypy>=1.18.2",
    "mypy_extensions>=1.1.0",
    "myst-parser>=4.0.1",
    "narwhals>=2.8.0",
    "ndex2>=3.11.0",
    "neo4j>=6.0.2",
    "neo4j-rust-ext>=6.0.2.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.5",
    "nh3>=0.3.1",
    "ninja>=1.13.0",
    "nltk>=3.9.2",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "numpy-financial>=1.0.0",
    "oaklib>=0.6.23",
    "obonet>=1.1.1",
    "ols-client>=0.2.1",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.23.1",
    "ontoportal-client>=0.0.4",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "outlines_core>=0.2.11",
    "owlready2>=0.48",
    "owlrl>=7.1.4",
    "oxigraph>=0.5.1",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pandera>=0.26.1",
    "pansi>=2024.11.0",
    "parse>=1.20.2",
    "parso>=0.8.5",
    "partial-json-parser>=0.2.1.1.post6",
    "pathspec>=0.12.1",
    "peewee>=3.18.2",
    "pexpect>=4.9.0",
    "pillow>=11.0.0",
    "pip>=25.2",
    "pip-tools>=7.5.1",
    "platformdirs>=4.5.0",
    "plotly>=6.3.1",
    "pluggy>=1.6.0",
    "ply>=3.11",
    "polyfactory>=2.22.2",
    "pooch>=1.8.2",
    "prefixcommons>=0.1.12",
    "prefixmaps>=0.2.6",
    "preshed>=3.0.10",
    "prettytable>=3.16.0",
    "prometheus_client>=0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prompt_toolkit>=3.0.52",
    "pronto>=2.7.0",
    "propcache>=0.4.1",
    "protobuf>=6.32.1",
    "psutil>=7.1.0",
    "ptyprocess>=0.7.0",
    "pure_eval>=0.2.3",
    "py-cpuinfo>=9.0.0",
    "py2neo>=2021.2.4",
    "pyahocorasick>=2.2.0",
    "pyalex>=0.18",
    "pyarrow>=21.0.0",
    "pybase64>=1.4.2",
    "pyclipper>=1.3.0.post6",
    "pycountry>=24.6.1",
    "pycparser>=2.23",
    "pydantic>=2.0,<3.0",
    "pydantic_core>=2.41.4",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pydotplus>=2.0.2",
    "Pygments>=2.19.2",
    "pyjnius>=1.7.0",
    "PyJSG>=0.11.10",
    "pylatexenc>=2.10",
    "pynndescent>=0.5.13",
    "pyogrio>=0.11.1",
    "pyparsing>=3.2.5",
    "pypdfium2>=4.30.0",
    "pyproj>=3.7.2",
    "pyproject_hooks>=1.2.0",
    "pyrate-limiter>=3.9.0",
    "pyshacl>=0.30.1",
    "PyShEx>=0.8.1",
    "PyShExC>=0.9.1",
    "pysolr>=3.10.0",
    "pystow>=0.7.11",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-logging>=2015.11.4",
    "pytextrank>=3.3.0",
    "python-bidi>=0.6.6",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-json-logger>=4.0.0",
    "python-Levenshtein>=0.27.1",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "pytokens>=0.2.0",
    "pytz>=2025.2",
    "pyvis>=0.3.2",
    "PyYAML>=6.0.3",
    "pyzmq>=27.1.0",
    "qwen-vl-utils>=0.0.14",
    "RapidFuzz>=3.14.1",
    "rapidocr>=3.4.2",
    "rapids-logger>=0.1.19",
    "ratelimit>=2.2.1",
    "rdflib>=7.2.1",
    "rdflib-jsonld>=0.6.1",
    "rdflib-shim>=1.0.3",
    "readme_renderer>=44.0",
    "redis>=6.4.0",
    "referencing>=0.37.0",
    "regex>=2025.9.18",
    "reporters-db>=3.2.59",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "requests-toolbelt>=1.0.0",
    "responses>=0.25.8",
    "retrying>=1.4.2",
    "rfc3339-validator>=0.1.4",
    "rfc3986>=2.0.0",
    "rfc3987>=1.3.8",
    "rich>=14.2.0",
    "rich-toolkit>=0.15.1",
    "rignore>=0.7.0",
    "robot>=20071211",
    "roman-numerals-py>=3.1.0",
    "rpds-py>=0.27.1",
    "rtree>=1.4.1",
    "ruff>=0.14.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sec-downloader>=0.12.2",
    "sec-edgar-downloader>=5.0.3",
    "SecretStorage>=3.4.0",
    "segtok>=1.5.11",
    "semchunk>=2.2.2",
    "semsql>=0.4.0",
    "sentencepiece>=0.2.1",
    "sentry-sdk>=2.41.0",
    "setproctitle>=1.3.7",
    "setuptools>=79.0.1",
    "setuptools-scm>=9.2.1",
    "shapely>=2.1.2",
    "shellingham>=1.5.4",
    "ShExJSG>=0.8.2",
    "six>=1.17.0",
    "smart_open>=7.3.1",
    "smmap>=5.0.2",
    "sniffio>=1.3.1",
    "snowballstemmer>=3.0.1",
    "sortedcontainers>=2.4.0",
    "soundfile>=0.13.1",
    "soupsieve>=2.8",
    "soxr>=1.0.0",
    "spacy>=3.8.7",
    "spacy-alignments>=0.9.2",
    "spacy-legacy>=3.0.12",
    "spacy-loggers>=1.0.5",
    "sparqlslurper>=0.5.1",
    "SPARQLWrapper>=2.0.0",
    "Sphinx>=8.2.3",
    "sphinx-click>=6.1.0",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jquery>=4.1",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "SQLAlchemy>=2.0.44",
    "SQLAlchemy-Utils>=0.38.3",
    "srsly>=2.5.1",
    "sse-starlette>=3.0.2",
    "sssom>=0.4.17",
    "sssom-schema>=1.0.0",
    "stack-data>=0.6.3",
    "starlette>=0.48.0",
    "structlog>=25.4.0",
    "sympy>=1.14.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tesserocr>=2.9.1",
    "textdistance>=4.6.3",
    "thinc>=8.3.6",
    "threadpoolctl>=3.6.0",
    "tifffile>=2025.10.4",
    "tiktoken>=0.12.0",
    "tld>=0.13.1",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
    "traitlets>=5.14.3",
    "twine>=6.2.0",
    "typeguard>=4.4.4",
    "typer>=0.19.2",
    "types-python-dateutil>=2.9.0.20251008",
    "typing_extensions>=4.15.0",
    "typing-inspect>=0.9.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "tzlocal>=5.3.1",
    "umap-learn>=0.5.9.post2",
    "Unidecode>=1.4.0",
    "uri-template>=1.3.0",
    "uritemplate>=4.2.0",
    "url-normalize>=2.2.1",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
    "uvloop>=0.21.0",
    "validators>=0.35.0",
    "wasabi>=1.1.3",
    "watchdog>=6.0.0",
    "watchfiles>=1.1.1",
    "wcwidth>=0.2.14",
    "weasel>=0.4.1",
    "webcolors>=24.11.1",
    "websockets>=15.0.1",
    "Werkzeug>=3.1.3",
    "wheel>=0.45.1",
    "wrapt>=1.17.3",
    "xlsxwriter>=3.2.9",
    "xxhash>=3.6.0",
    "yake>=0.6.0",
    "yamldown>=0.1.8",
    "yarl>=1.22.0",
    "yfinance>=0.2.66",
    "zenodo_client>=0.3.6",
    "zipp>=3.23.0",
]

[project.optional-dependencies]
docparse-parquet = [
    "pyarrow>=16.1.0",
]
gpu12x = [
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cuda-cupti-cu12>=12.9.79",
    "nvidia-cuda-nvrtc-cu12>=12.9.86",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.10.2.21",
    "nvidia-cudnn-frontend>=1.15.0",
    "nvidia-cufft-cu12>=11.4.1.4",
    "nvidia-cufile-cu12>=1.14.1.1",
    "nvidia-curand-cu12>=10.3.10.19",
    "nvidia-cusolver-cu12>=11.7.5.82",
    "nvidia-cusparse-cu12>=12.5.10.65",
    "nvidia-cusparselt-cu12>=0.7.1",
    "nvidia-cutlass-dsl>=4.2.1",
    "nvidia-ml-py>=13.580.82",
    "nvidia-nccl-cu12>=2.27.3",
    "nvidia-nvjitlink-cu12>=12.9.86",
    "nvidia-nvshmem-cu12>=3.4.5",
    "nvidia-nvtx-cu12>=12.9.79",
    "cuda-bindings>=12.9.3",
    "cuda-pathfinder>=1.3.1",
    "cuda-python>=12.9.3",
    "cuda-toolkit>=12.9.1",
    "pylibraft-cu12>=25.10.0",
    "rmm-cu12>=25.10.0",
    "torch @ https://download.pytorch.org/whl/cu129/torch-2.8.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl",
    "torchvision @ https://download.pytorch.org/whl/cu129/torchvision-0.23.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl",
    "torchaudio @ https://download.pytorch.org/whl/cu129/torchaudio-2.8.0%2Bcu129-cp313-cp313-manylinux_2_28_x86_64.whl",
    "flashinfer-cubin>=0.4.0",
    "flashinfer-python>=0.4.0",
    "compressed-tensors>=0.12.2",
    "accelerate>=1.10.1",
    "easyocr>=1.7.2",
    "libcuvs-cu12>=25.10.0",
    "libraft-cu12>=25.10.0",
    "librmm-cu12>=25.10.0",
    "cuvs-cu12>=25.10.0",
    "docling>=2.56.1",
    "docling-ibm-models>=3.9.1",
    "openai>=2.3.0",
    "openai-harmony>=0.0.4",
    "openai-whisper>=20250625",
    "pyserini>=1.2.0",
    "transformers>=4.57.1",
    "triton>=3.4.0",
    "sentence-transformers>=5.1.1",
    "keybert>=0.9.0",
    "stanza>=1.11.0",
    "xformers>=0.0.32.post1",
    "xgrammar>=0.1.25",
    "safetensors>=0.6.2",
    "cupy-cuda12x==14.0.0a1 ; python_version >= '3.13' and python_version < '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "vllm==0.11.0rc2.dev449+g134f70b3e.d20251014.cu129 ; python_version >= '3.13' and python_version < '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "faiss==1.12.0 ; python_version >= '3.13' and python_version < '3.14' and platform_system == 'Linux' and platform_machine == 'x86_64'",
    "ray>=2.50.0",
]

[project.scripts]
docstokg-hybrid-validation = "DocsToKG.HybridSearch.validation:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"

[tool.pytest.ini_options]
markers = [
    "real_vectors: tests that require the real-vector fixture (enable with --real-vectors)",
    "scale_vectors: tests that require the large real-vector fixture (enable with --scale-vectors)",
    "integration: marks integration tests that may hit real network services",
    "benchmark: performance benchmarks requiring pytest-benchmark",
]
testpaths = ["tests"]

[tool.poetry.group.extract]
optional = true

[tool.poetry.group.extract.dependencies]
trafilatura = ">=2.0.0"
